# frau-liu-learn-german

./: .env  pyproject.toml
apps/accounts/: admin.py  models.py  urls.py
apps/accounts/migrations/: 0001_initial.py  0002_user_is_beta_tester_module_userdata_entitlement.py
apps/accounts/models/: __init__.py  entitlement.py  module.py  user.py  user_data.py
apps/accounts/permissions/: __init__.py  entitlement.py
apps/accounts/serializers/: __init__.py  entitlement.py  user.py  user_data.py
apps/accounts/views/: __init__.py  entitlement.py  user.py  user_data.py
apps/learning/models/: lexicon.py
apps/learning_by_video/: apps.py  throttles.py  urls.py
apps/learning_by_video/migrations/: 0001_initial.py  0002_remove_videoexpressionoccurrence_idx_videoexpressionoccurrence_video_ts_and_more.py
apps/learning_by_video/models/: __init__.py  lexicon.py  lexicon_base.py  progress.py  subtitle.py  user_data.py  video.py
apps/learning_by_video/serializers/: __init__.py  occurrences.py  progress.py  subtitles.py  user_data.py  videos.py
apps/learning_by_video/views/: __init__.py  occurrences.py  subtitles.py  user_data.py  videos.py
apps/lexicon/migrations/: 0001_initial.py
apps/lexicon/models/: __init__.py  base.py  core.py  utils.py
config/: settings.py  urls.py
frontend/: vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js  videos.js
frontend/src/components/: Navigator.css  Navigator.jsx
frontend/src/layouts/: AppLayout.css  AppLayout.jsx
frontend/src/pages/: Home.jsx  VideoDetail.jsx
(+8 files in other folders)
